# political_geography

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
doc/uk/: README.md
